# usde-watcher

./: pyproject.toml
scripts/: e.py
usde/: etl.py  llama.py  pipeline.py
